# solana_client_example

./: .gitignore  Cargo.toml  README.md  deploy_ts.sh  package.json  raydium.js  raydium.ts
docs/: account_data_too_small_for_instruction.md  create_token.md  do_not_use_rand_crate.md  eslint.md  greeting_account_presist_data.md  jito_mev.md  kinobi.md  solana_openbook.md  solana_terminology.md  stake.md  transfer_sol.md
examples/: create_token.rs  greeting_account.rs  invoke_program.rs  nonce_account.rs  raydium.rs  send_sol.rs  send_usdc.rs  spl_token_2022.rs  stake.rs  transfer_to_wsol.rs
golang/: go.mod
golang/decode_token_account/: main.go
golang/greeting_account_borsh_serialize/: main.go
programs/greeting_account/: Cargo.toml
programs/greeting_account/tests/: lib.rs
programs/transfer_sol/: Cargo.toml
programs/transfer_sol/src/: lib.rs
python/: greeting_account_borsh_serialize.py
src/: lib.rs
typescripts/: greeting_account.ts  init.ts  invoke_program.ts  nonce_account.ts  raydium.ts  raydium_price.ts  send_sol.ts  send_usdc.ts  transfer_sol.ts
