# can't use cargo workspace, cargo build-bpf would error
[workspace]
members = ["programs/greeting_account"]
[workspace.dependencies]
borsh = "1.5.1"
#borsh-derive = "1.5.1"
solana-program = "2.0.2"
# program's dev-dependencies
solana-program-test = "2.0.2"
solana-sdk = "2.0.2"
tokio = { version = "1.38.1", features = ["macros", "rt"] }

[package]
name = "solana_client_example"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "2.0.2"
solana-sdk.workspace = true
solana-rpc-client-nonce-utils = "2.0.2"
spl-token = "6.0.0"
spl-associated-token-account = "4.0.0"
borsh.workspace = true

serde_json = "1.0.120"
dotenv = "0.15.0"
