# can't use cargo workspace, cargo build-bpf would error
[workspace]
members = ["programs/greeting_account", "programs/transfer_sol"]
[workspace.dependencies]
borsh = "1.5.1"
#borsh-derive = "1.5.1"
solana-program = "2.0.2"
# program's dev-dependencies
solana-program-test = "2.0.2"
solana-sdk = "2.0.2"
tokio = { version = "1.38.1", features = ["macros", "rt"] }

[package]
name = "solana_client_example"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "2.0.2"
solana-sdk.workspace = true
solana-rpc-client-nonce-utils = "2.0.2"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "4.0.0", features = ["no-entrypoint"] }
borsh.workspace = true
mpl-token-metadata = "4.1.2"

serde_json = "1.0.120"
dotenv = "0.15.0"
