[package]
name = "greeting_account"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh.workspace = true
borsh-derive.workspace = true
solana-program.workspace = true

[dev-dependencies]
solana-program-test.workspace = true
solana-sdk.workspace = true
tokio.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
